// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`shows snapshot owner 1`] = `
<div
  className="TopBar"
>
  <nav
    className="TabNav"
  >
    <ul>
      <li>
        <a
          className="tabLink "
          href="/r/foo"
          onClick={[Function]}
        >
          Logs
        </a>
      </li>
      <li>
        <a
          className="tabLink tabLink--errors tabLink--is-selected"
          href="/r/foo/alerts"
          onClick={[Function]}
        >
          Alerts
          <span
            className="tabLink-alertBadge"
          >
            1
          </span>
        </a>
      </li>
    </ul>
  </nav>
  <section
    className="TopBar-tools"
  >
    <section
      className="TopBar-snapshotUrlWrap"
    >
      Snapshot shared by 
      foo
    </section>
  </section>
</div>
`;

exports[`shows snapshot url 1`] = `
<div
  className="TopBar"
>
  <nav
    className="TabNav"
  >
    <ul>
      <li>
        <a
          className="tabLink "
          href="/r/foo"
          onClick={[Function]}
        >
          Logs
        </a>
      </li>
      <li>
        <a
          className="tabLink tabLink--errors tabLink--is-selected"
          href="/r/foo/alerts"
          onClick={[Function]}
        >
          Alerts
          <span
            className="tabLink-alertBadge"
          >
            1
          </span>
        </a>
      </li>
    </ul>
  </nav>
  <section
    className="TopBar-tools"
  >
    <section
      className="TopBar-snapshotUrlWrap"
    >
      <button
        className="TopBar-snapshotButton "
        onClick={[Function]}
      >
        <svg
          className="TopBar-snapshotSvg"
        >
          snapshot.svg
        </svg>
        <span>
          Create a 
          <br />
          Snapshot
        </span>
      </button>
    </section>
  </section>
</div>
`;
